# ChangeLog for x11-plugins/wmweather
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmweather/ChangeLog,v 1.4 2003/02/12 09:44:12 vapier Exp $

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*wmweather-1.31-r1 (25 Apr 2002)

  30 Aug 2002; Seemant Kulleen <seemant@gentoo.org> * :

  Relocated to x11-plugins

  25 Apr 2002; Seemant Kulleen <seemant@gentoo.org> wmweather-1.31-r1.ebuild
  files/digest-wmweather-1.31-r1 :

  WindowMaker is not a requirement for this app.  So it was removed from the
  DEPEND list.  Thanks to gayeski@cae.wisc.edu (Michael Gayeski) in bug #2091

*wmweather-1.31 (9-Feb-2002)

  9 Feb 2002; Arcady Genkin <agenkin@thpoon.com> wmweather-1.31.ebuild :

  Fixed to make use of CFLAGS.

  7 Feb 2002; Arcady Genkin <agenkin@thpoon.com>  wmweather-1.31.ebuild :

  First version of the package.