@@ -1,5 +1,7 @@
-MD5 dca4b77ceb3fd156dedbaf3caf7c9afc ChangeLog 936
+MD5 ee4c2a031ec623d9b3e61e22957b0a7a ChangeLog 1158
 MD5 e6859edfde75a2d15aa3192485c1a99f wmweather-1.31-r1.ebuild 719
 MD5 a05b66d3125173f8f17e2076776df094 wmweather-1.31.ebuild 717
+MD5 652bd1efb736cbdc791717e8a461ce23 wmweather-2.4.0.ebuild 657
 MD5 eb6f29959ad4173cb1f4776b45e81563 files/digest-wmweather-1.31 65
 MD5 eb6f29959ad4173cb1f4776b45e81563 files/digest-wmweather-1.31-r1 65
+MD5 07856e0234c60aadbaae76016dce5786 files/digest-wmweather-2.4.0 66
