@@ -1,6 +1,12 @@
 # ChangeLog for x11-plugins/wmweather
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmweather/ChangeLog,v 1.4 2003/02/12 09:44:12 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmweather/ChangeLog,v 1.5 2003/05/28 12:55:38 joker Exp $
+
+*wmweather-2.4.0 (28 May 2003)
+
+  28 May 2003; Christian Birchinger <joker@gentoo.org> wmweather-2.4.0.ebuild:
+  Totaly new version. Uses curl instead of external scripts.
+  This dockapp is not the same as wmweather+ 2.x.
 
   06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
  
